chore: add makefile

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,4 +7,4 @@ services:
             - /etc/localtime:/etc/localtime:ro
             - ..:/var/www/html
         ports:
-            - 80:80
+            - ${WEB_PORT}:80
